--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Year to Century Converter</title>
+    <title>EXERCISE 6</title>
 </head>
 <body style = "background-color: burlywood;">
 <script src="style1.js">
